fix(blog): revert "chore … more legible selector"
revert 21c3a2d which actually broke the selector

--- a/source/_imports/components/django.cms.blog.css
+++ b/source/_imports/components/django.cms.blog.css
@@ -140,7 +140,8 @@ ul.post-detail {
 :--article-item .blog-visual  { grid-area: media }
 :--article-item .blog-lead    { grid-area: desc }
 
-:--article-item + :--article-item {
+/* FAQ: :--article-item + :--article-item is NOT the same */
+:--article-item + article {
   margin-top: var(--post-buffer);
   border-top: var(--global-border-width--normal) solid var(--global-color-primary--dark);
   padding-top: var(--post-buffer);
